@@ -1,25 +1,7 @@
 #pragma once
 
 #include "DomoticzHardware.h"
-
-typedef struct _tP1Power {
-	unsigned char len;
-	unsigned char type;
-	unsigned char subtype;
-	unsigned long powerusage1;
-	unsigned long powerusage2;
-	unsigned long powerdeliv1;
-	unsigned long powerdeliv2;
-	unsigned long usagecurrent;
-	unsigned long delivcurrent;
-} P1Power;
-
-typedef struct _tP1Gas {
-	unsigned char len;
-	unsigned char type;
-	unsigned char subtype;
-	unsigned long gasusage;
-} P1Gas;
+#include "hardwaretypes.h"
 
 class P1MeterBase : public CDomoticzHardwareBase
 {
